js/js.translator/testData/incremental/invalidation/unstableIrReproducer/lib1/f1.1.kt
fun f1(x: Int): Int {
    when (x) {
        10 -> return 100
        else -> return 1
    }
    return 0
}
